dist/rclone/Deployment.rclone-crypt-b2-cmdcentral-k8s-backups.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: rclone
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: rclone
  name: rclone-crypt-b2-cmdcentral-k8s-backups
  namespace: rclone
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: rclo-rclone-crypt-b2-cmdcentral-k8s-backups-deployment-c8b40f75
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rclone-crypt-b2-cmdcentral-k8s-backups
        cdk8s.io/metadata.addr: rclo-rclone-crypt-b2-cmdcentral-k8s-backups-deployment-c8b40f75
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - --config
            - /config/rclone.conf
            - --fast-list
            - serve
            - s3
            - "crypt-b2-cmdcentral-k8s-backups:"
            - --addr
            - :8042
          image: rclone/rclone
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8042
              scheme: HTTP
          name: rclone
          ports:
            - containerPort: 8042
              name: crypt-b2-cmdcen
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8042
              scheme: HTTP
          resources:
            limits:
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /config
              name: secret-rclone-config
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: secret-rclone-config
          secret:
            secretName: rclone-config
