dist/rclone/Service.rclone-gateway-crypt-wasabi-cmdcentral-k8s-backups.yaml
apiVersion: v1
kind: Service
metadata:
  name: rclone-gateway-crypt-wasabi-cmdcentral-k8s-backups
  namespace: rclone
spec:
  externalIPs: []
  ports:
    - port: 8042
      targetPort: 8042
  selector:
    cdk8s.io/metadata.addr: rclone-crypt-wasabi-cmdcentral-k8s-backups-deployment-c8d4f748
  type: ClusterIP
