dist/rclone/NetworkPolicy.default-block-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-block-ingress
  namespace: rclone
spec:
  podSelector:
    matchLabels:
      cdk8s.io/metadata.addr: rclone-rclone-deployment-c80b70e9
  policyTypes:
    - Ingress
