dist/rclone/NetworkPolicy.rclone-crypt-wasabi-cmdcentral-k8s-backups-allow-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rclone-crypt-wasabi-cmdcentral-k8s-backups-allow-traefik
  namespace: rclone
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8042
          protocol: TCP
  podSelector:
    matchLabels:
      cdk8s.io/metadata.addr: rclone-crypt-wasabi-cmdcentral-k8s-backups-deployment-c8d4f748
  policyTypes:
    - Ingress
