dist/rclone/NetworkPolicy.rclone-gateway-crypt-wasabi-cmdcentral-k8s-backups-allow-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rclone-gateway-crypt-wasabi-cmdcentral-k8s-backups-allow-namespaces
  namespace: rclone
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: velero
          podSelector: {}
      ports:
        - port: 8042
          protocol: TCP
  podSelector:
    matchLabels:
      cdk8s.io/metadata.addr: rclone-crypt-wasabi-cmdcentral-k8s-backups-deployment-c8d4f748
  policyTypes:
    - Ingress
